[package]
name = "webrst"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14"
bevy_rapier2d = "0.27"
hexx = "0.20"
wasm-bindgen = "0.2"
rand = "0.8"
# Ensure getrandom 0.3 (pulled by dependencies) has wasm_js enabled
getrandom = { version = "0.3", features = ["wasm_js"] }
# Pin uuid to 1.10.0 to avoid it pulling in getrandom 0.3 (if possible, but it might not matter now)
uuid = { version = "=1.10.0", features = ["v4", "js"] }
# Pin moxcms to 0.7.2 which is confirmed to use edition 2021
moxcms = "=0.7.2"
# Pin pxfm to 0.1.23 to avoid edition 2024 requirement in 0.1.26
pxfm = "=0.1.23"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
